--- a/code/frontend/MakeItSo/Reminders 2.0.xcodeproj/xcshareddata/xcschemes/Reminders 2.0 (iOS) DEV.xcscheme
+++ b/code/frontend/MakeItSo/Reminders 2.0.xcodeproj/xcshareddata/xcschemes/Reminders 2.0 (iOS) DEV.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1330"
+   LastUpgradeVersion = "1420"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "88FEECD627275ABD00ED368C"
+               BlueprintIdentifier = "88FEECD027275ABD00ED368C"
                BuildableName = "Reminders 2.0.app"
-               BlueprintName = "Reminders 2.0 (macOS) DEV"
+               BlueprintName = "Reminders 2.0 (iOS) DEV"
                ReferencedContainer = "container:Reminders 2.0.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,9 +44,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "88FEECD627275ABD00ED368C"
+            BlueprintIdentifier = "88FEECD027275ABD00ED368C"
             BuildableName = "Reminders 2.0.app"
-            BlueprintName = "Reminders 2.0 (macOS) DEV"
+            BlueprintName = "Reminders 2.0 (iOS) DEV"
             ReferencedContainer = "container:Reminders 2.0.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -61,9 +61,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "88FEECD627275ABD00ED368C"
+            BlueprintIdentifier = "88FEECD027275ABD00ED368C"
             BuildableName = "Reminders 2.0.app"
-            BlueprintName = "Reminders 2.0 (macOS) DEV"
+            BlueprintName = "Reminders 2.0 (iOS) DEV"
             ReferencedContainer = "container:Reminders 2.0.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
